# Euripus-Sports

./: .dockerignore  .env.selfhosted-images.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.selfhosted.yml  compose.yaml  v1.md
.github/workflows/: publish-ghcr.yml
config/: competition_rules.yaml  providers.yaml  sample_events.yaml  sources.yaml  team_aliases.yaml
docs/: SELF_HOSTED_DEPLOYMENT.md  api-and-euripus.md  womens-competitions-implementation-plan.md
scripts/: deploy-selfhosted.sh  publish-image.sh
src/: api.rs  config.rs  db.rs  domain.rs  inference.rs  ingest.rs  jobs.rs  main.rs  repository.rs
src/sources/: allsvenskan.rs  champions_league.rs  damallsvenskan.rs  elitettan.rs  elitserien.rs  formula1.rs  hockeyallsvenskan.rs  loader.rs  lpga_tour.rs  mod.rs  ndhl.rs  pga_tour.rs  premier_league.rs  sdhl.rs  shl.rs  superettan.rs  svenskfotboll_league.rs  tv4play.rs  viaplay.rs  world_cup.rs
tests/fixtures/: allsvenskan_readability.md  champions_league_bbc_fixtures.md  damallsvenskan_graphql.json  elitettan_graphql.json  elitserien_dam_spelprogram.html  elitserien_spelprogram.html  fifa_world_cup_fifa_fixtures.md  formula1_2026_start_times.html  hockeyallsvenskan_game_schedule.md  lpga_schedule_2026.html  lpga_svenskgolf_weekly.md  ndhl_schedule.txt  pga_broadcast_schedule_readability.md  pga_schedule_readability.md  pga_svenskgolf_rbc_heritage.md  pga_svenskgolf_weekly.md  premier_league_bbc_fixtures.md  sdhl_game_schedule.json  shl_game_schedule.md  superettan_matcher_readability.md  superettan_svenskfotboll_round1.md  (+6 more)
